deploy/apps/go-judge/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-judge
  labels:
    app.kubernetes.io/name: go-judge
    app.kubernetes.io/component: executor
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: go-judge
    app.kubernetes.io/component: executor
  ports:
    - name: http
      port: 5050
      targetPort: 5050
      protocol: TCP
